--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/google-plus": "^4.7.0",
+    "@ionic-native/onesignal": "^4.3.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
@@ -37,6 +38,7 @@
     "firebase": "^5.5.7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "2.2.1",
     "rxjs": "6.0.0",
     "rxjs-compat": "6.3.3",
     "sw-toolbox": "3.6.0",
@@ -57,7 +59,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.416991332199-grlumqdmjpftnocitghp6fhq4n0gbd9v"
-      }
+      },
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
