--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "reservasApp",
-  "version": "0.4.0",
+  "name": "PlaySport",
+  "version": "0.5.0",
   "author": "Jhonnathan Henriquez",
   "homepage": "https://www.linkedin.com/in/jhonnathanhenriquez/",
   "private": true,
