--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PlaySport",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Jhonnathan Henriquez",
   "homepage": "https://www.linkedin.com/in/jhonnathanhenriquez/",
   "private": true,
@@ -11,6 +11,7 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
@@ -29,16 +30,16 @@
     "angularfire2": "5.1.1",
     "cordova-android": "6.2.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-googleplus": "5.2.1",
+    "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.2",
+    "cordova-plugin-ionic-webview": "^2.3.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.7",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "onesignal-cordova-plugin": "2.2.1",
+    "onesignal-cordova-plugin": "^2.2.1",
     "rxjs": "6.0.0",
     "rxjs-compat": "6.3.3",
     "sw-toolbox": "3.6.0",
