--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PlaySport",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "author": "Jhonnathan Henriquez",
   "homepage": "https://www.linkedin.com/in/jhonnathanhenriquez/",
   "private": true,
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/google-plus": "^4.7.0",
+    "@ionic-native/image-picker": "^4.20.0",
     "@ionic-native/onesignal": "^4.3.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
@@ -35,9 +36,11 @@
     "cordova-plugin-ionic-webview": "^2.3.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.3",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.7",
     "ionic-angular": "3.9.2",
+    "ionic-img-viewer": "^2.9.0",
     "ionicons": "3.0.0",
     "onesignal-cordova-plugin": "^2.2.1",
     "rxjs": "6.0.0",
@@ -61,7 +64,10 @@
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.416991332199-grlumqdmjpftnocitghp6fhq4n0gbd9v"
       },
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "playSport images"
+      }
     },
     "platforms": [
       "android"
