--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PlaySport",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "author": "Jhonnathan Henriquez",
   "homepage": "https://www.linkedin.com/in/jhonnathanhenriquez/",
   "private": true,
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/facebook": "^4.20.0",
     "@ionic-native/google-plus": "^4.7.0",
     "@ionic-native/image-picker": "^4.20.0",
     "@ionic-native/onesignal": "^4.3.0",
@@ -29,8 +30,8 @@
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "5.1.1",
-    "cordova-android": "6.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-facebook4": "4.2.1",
     "cordova-plugin-googleplus": "^5.2.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.3",
@@ -46,7 +47,8 @@
     "rxjs": "6.0.0",
     "rxjs-compat": "6.3.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
+    "zone.js": "0.8.29",
+    "cordova-android": "6.4.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
@@ -67,6 +69,12 @@
       "onesignal-cordova-plugin": {},
       "cordova-plugin-telerik-imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "playSport images"
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "318988225463263",
+        "APP_NAME": "PlaySport",
+        "FACEBOOK_HYBRID_APP_EVENTS": "false",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.40.0"
       }
     },
     "platforms": [
